--- a/smieci/app/src/main/res/drawable/gradient_papier.xml
+++ b/smieci/app/src/main/res/drawable/gradient_papier.xml
@@ -3,7 +3,8 @@
     <item>
         <shape android:shape="rectangle">
             <gradient
-                android:startColor="@color/papier">
+                android:startColor="@color/papier"
+                android:endColor="#00000000">
             </gradient>
         </shape>
     </item>
