--- a/smieci/app/src/main/res/values/colors.xml
+++ b/smieci/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="papier">#0A2843</color>
     <color name="metal">#412F09</color>
     <color name="Bio">#290D02</color>
-    <color name="gray">#888</color>
+    <color name="gray">#D9D9D9</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
