--- a/smieci/app/src/main/res/layout/logowanie.xml
+++ b/smieci/app/src/main/res/layout/logowanie.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Logowanie"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark_green_bg"
@@ -46,9 +47,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="530dp"
         android:background="@drawable/przycisk_zatwierdz"
-        android:text="Zatwierdź"
+        android:text="@string/zatwierdz"
         android:textColor="@color/white"
-        android:textSize="14dp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +75,7 @@
             android:layout_height="40dp"
             android:gravity="center_vertical"
             android:paddingStart="15dp"
-            android:text="Pomiń"
+            android:text="@string/pomin"
             android:textColor="@color/white"
             android:textSize="14dp"
             tools:layout_editor_absoluteX="285dp"
@@ -96,44 +97,47 @@
         android:id="@+id/imageView4"
         android:layout_width="130dp"
         android:layout_height="265dp"
-        android:layout_marginStart="150dp"
         android:layout_marginTop="100dp"
         android:src="@drawable/planet_earth"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/planet_earth" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/editTextEmail"
         android:layout_width="280dp"
         android:layout_height="40dp"
-        android:layout_marginStart="64dp"
         android:layout_marginTop="380dp"
         android:background="@drawable/pole_input"
         android:elevation="2dp"
         android:ems="10"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:paddingLeft="15dp"
-        android:text="Email"
-        android:textColor="@color/light_gray_input_text"
-        android:textSize="15dp"
+        android:textColor="@color/gray_text"
+        android:textColorHint="@color/light_gray_hint"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/editTextHaslo"
         android:layout_width="280dp"
         android:layout_height="40dp"
-        android:layout_marginStart="64dp"
         android:layout_marginTop="450dp"
         android:background="@drawable/pole_input"
         android:elevation="2dp"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:paddingLeft="15dp"
-        android:text="Hasło"
-        android:textColor="@color/light_gray_input_text"
-        android:textSize="15dp"
+        android:hint="@string/haslo"
+        android:textColorHint="@color/light_gray_hint"
+        android:textColor="@color/gray_text"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -141,12 +145,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="156dp"
         android:layout_marginTop="320dp"
-        android:text="Zaloguj się"
+        android:text="@string/zaloguj"
         android:textColor="@color/light_gray_text"
         android:textFontWeight="500"
         android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -166,9 +170,9 @@
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:paddingRight="5dp"
-            android:text="@string/zarejestruj"
+            android:text="@string/brak_konta"
             android:textFontWeight="500"
-            android:textSize="15dp">
+            android:textSize="16sp">
 
         </TextView>
 
@@ -176,9 +180,9 @@
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
-            android:text="@string/zarejestruj_underline"
+            android:text="@string/brak_konta_zaloguj"
             android:textFontWeight="500"
-            android:textSize="15dp">
+            android:textSize="16sp">
 
         </TextView>
     </LinearLayout>
