--- a/smieci/app/src/main/res/layout/rejestracja.xml
+++ b/smieci/app/src/main/res/layout/rejestracja.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_green_bg"
+    android:background="@color/light_green"
     >
 
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageWave1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,7 +21,7 @@
         app:srcCompat="@drawable/shape1" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageWave2"
         android:layout_width="wrap_content"
         android:layout_height="500dp"
         android:layout_marginBottom="-160dp"
@@ -32,7 +32,7 @@
         app:srcCompat="@drawable/shape2" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imageWave3"
         android:layout_width="414dp"
         android:layout_height="560dp"
         android:layout_marginBottom="-190dp"
@@ -43,7 +43,7 @@
         app:srcCompat="@drawable/shape3" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linearLayoutPomin"
         android:layout_width="109dp"
         android:layout_height="39dp"
         android:layout_marginTop="15dp"
@@ -61,7 +61,7 @@
             android:layout_height="40dp"
             android:gravity="center_vertical"
             android:paddingStart="15dp"
-            android:text="Pomiń"
+            android:text="@string/pomin"
             android:textColor="@color/white"
             android:textSize="14dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -82,23 +82,23 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/userIcon"
         android:layout_width="130dp"
         android:layout_height="265dp"
-        android:layout_marginStart="150dp"
         android:layout_marginTop="60dp"
         android:src="@drawable/planet_earth"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/planet_earth" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textZarejestruj"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="140dp"
         android:layout_marginTop="285dp"
-        android:text="Zarejestruj się"
+        android:text="@string/zarejestruj"
         android:textColor="@color/gray_text"
         android:textFontWeight="500"
         android:textSize="20dp"
@@ -106,58 +106,58 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/editTextEmail"
         android:layout_width="280dp"
         android:layout_height="40dp"
-        android:layout_marginStart="64dp"
         android:layout_marginTop="340dp"
-        android:text="Email"
-        android:paddingLeft="15dp"
-        android:textSize="15dp"
-        android:textColor="@color/light_gray_input_text"
+        android:background="@drawable/pole_input"
+        android:elevation="2dp"
         android:ems="10"
         android:inputType="textEmailAddress"
+        android:paddingStart="15dp"
+        android:hint="@string/email"
+        android:textColorHint="@color/light_gray_hint"
+        android:textColor="@color/gray_text"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/pole_input"
-        android:elevation="2dp"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/editTextHaslo"
         android:layout_width="280dp"
         android:layout_height="40dp"
-        android:layout_marginStart="64dp"
         android:layout_marginTop="410dp"
-        android:ems="10"
-        android:text="Hasło"
-        android:paddingLeft="15dp"
-        android:textSize="15dp"
-        android:textColor="@color/light_gray_input_text"
-        android:inputType="text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/pole_input"
         android:elevation="2dp"
-        />
+        android:ems="10"
+        android:inputType="textPassword"
+        android:paddingStart="15dp"
+        android:hint="@string/haslo"
+        android:textColorHint="@color/light_gray_hint"
+        android:textColor="@color/gray_text"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPassword2"
+        android:id="@+id/editTextHasloPow"
         android:layout_width="280dp"
         android:layout_height="40dp"
-        android:layout_marginStart="64dp"
         android:layout_marginTop="480dp"
-        android:ems="10"
-        android:text="Powtórz hasło"
-        android:paddingLeft="15dp"
-        android:textSize="15dp"
-        android:textColor="@color/light_gray_input_text"
-        android:inputType="text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/pole_input"
         android:elevation="2dp"
-        />
+        android:ems="10"
+        android:inputType="textPassword"
+        android:paddingStart="15dp"
+        android:hint="@string/pow_haslo"
+        android:textColorHint="@color/light_gray_hint"
+        android:textColor="@color/gray_text"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
@@ -165,11 +165,11 @@
         android:layout_height="50dp"
         android:layout_marginTop="560dp"
         android:background="@drawable/przycisk_zatwierdz"
-        android:text="Zatwierdź"
+        android:text="@string/zatwierdz"
         android:textColor="@color/white"
-        android:textSize="14dp"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -187,20 +187,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:text="@string/zaloguj"
+            android:text="@string/konto"
             android:layout_gravity="center_vertical"
-            android:paddingRight="5dp"
+            android:paddingEnd="5dp"
             android:textFontWeight="500"
-            android:textSize="15dp"
+            android:textSize="16sp"
             >
         </TextView>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:text="@string/zaloguj_underline"
+            android:text="@string/konto_zaloguj"
             android:layout_gravity="center_vertical"
             android:textFontWeight="500"
-            android:textSize="15dp"
+            android:textSize="16sp"
             >
 
         </TextView>
