drawable kształty - poprawione, dodawanie informacji tekst

--- a/smieci/app/src/main/res/drawable/przycisk_pomin.xml
+++ b/smieci/app/src/main/res/drawable/przycisk_pomin.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#3D413A" />
+<selector  xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <solid android:color="@color/green_dark_button" />
 
-    <padding
-        android:left="1dp"
-        android:right="1dp"
-        android:bottom="1dp"
-        android:top="1dp" />
+            <padding
+                android:left="1dp"
+                android:right="1dp"
+                android:bottom="1dp"
+                android:top="1dp" />
 
-    <corners android:radius="10dp" />
+            <corners android:radius="10dp" />
 
 
-</shape>
+        </shape>
+    </item>
+</selector>
