--- a/smieci/app/src/main/res/layout/dodawanie_informacji.xml
+++ b/smieci/app/src/main/res/layout/dodawanie_informacji.xml
@@ -98,6 +98,7 @@
             android:text="ToggleButton"
             android:textOff="@string/zamieszkały"
             android:textOn="@string/zamieszkały"
+            android:textColor="@color/gray_text"
             android:textSize="12sp"
             android:textFontWeight="400"
             android:stateListAnimator="@null"
@@ -122,6 +123,7 @@
             android:text="ToggleButton"
             android:textOff="@string/niezamieszkały"
             android:textOn="@string/niezamieszkały"
+            android:textColor="@color/gray_text"
             android:textSize="12sp"
             android:textFontWeight="400"
             android:stateListAnimator="@null"
@@ -149,6 +151,7 @@
             android:text="ToggleButton"
             android:textOff="@string/jednorodzinna"
             android:textOn="@string/jednorodzinna"
+            android:textColor="@color/gray_text"
             android:textSize="12sp"
             android:textFontWeight="400"
             android:stateListAnimator="@null"
@@ -209,6 +212,7 @@
             android:textOff="@string/segre"
             android:textOn="@string/segre"
             android:textSize="12sp"
+            android:textColor="@color/gray_text"
             android:stateListAnimator="@null"
             android:layout_margin="3dp"
             android:layout_gravity="center"
@@ -231,6 +235,7 @@
             android:text="ToggleButton"
             android:textOff="@string/nie_segre"
             android:textOn="@string/nie_segre"
+            android:textColor="@color/gray_text"
             android:textSize="12sp"
             android:stateListAnimator="@null"
             android:layout_margin="3dp"
