--- a/smieci/app/src/main/res/drawable/buttons_userpanel.xml
+++ b/smieci/app/src/main/res/drawable/buttons_userpanel.xml
@@ -1,16 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:state_pressed="false">
+    <item>
         <shape>
             <solid android:color="@color/light_green"></solid>
-            <corners android:radius="20dp"></corners>
-        </shape>
-    </item>
-
-    <item android:state_pressed="true">
-        <shape>
-            <solid android:color="@color/green_dark_button_pressed"></solid>
             <corners android:radius="20dp"></corners>
         </shape>
     </item>
