--- a/smieci/app/src/main/res/drawable/przycisk_zatwierdz.xml
+++ b/smieci/app/src/main/res/drawable/przycisk_zatwierdz.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<selector  xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <solid android:color="@color/green_dark_button" />
+            <padding
+                android:left="1dp"
+                android:right="1dp"
+                android:bottom="1dp"
+                android:top="1dp" />
 
-    <solid android:color="#3D413A" />
-
-    <padding
-        android:left="1dp"
-        android:right="1dp"
-        android:bottom="1dp"
-        android:top="1dp" />
-
-    <corners android:radius="150dp" />
-</shape>
+            <corners android:radius="150dp" />
+        </shape>
+    </item>
+</selector>
