--- a/smieci/app/src/main/res/drawable/toggle_option_unchecked.xml
+++ b/smieci/app/src/main/res/drawable/toggle_option_unchecked.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <solid android:color="@color/white" />
+            <padding
+                android:left="0.5dp"
+                android:right="0.5dp"
+                android:bottom="1dp"
+                android:top="1dp" />
 
-    <solid android:color="@color/white" />
-
-    <padding
-        android:left="0.5dp"
-        android:right="0.5dp"
-        android:bottom="1dp"
-        android:top="1dp" />
-
-    <corners android:radius="5dp" />
-</shape>
+            <corners android:radius="5dp" />
+        </shape>
+    </item>
+</selector>
