--- a/smieci/app/src/main/res/drawable/toggle_options_bg.xml
+++ b/smieci/app/src/main/res/drawable/toggle_options_bg.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <solid android:color="@color/white" />
+            <stroke android:color="@color/gray" android:width="1dp"></stroke>
+            <padding
+                android:left="1dp"
+                android:right="1dp"
+                android:bottom="1dp"
+                android:top="1dp" />
 
-    <solid android:color="@color/white" />
-    <stroke android:color="#8C8A8A" android:width="1dp"></stroke>
-    <padding
-        android:left="1dp"
-        android:right="1dp"
-        android:bottom="1dp"
-        android:top="1dp" />
-
-    <corners android:radius="8dp" />
-</shape>
+            <corners android:radius="8dp" />
+        </shape>
+    </item>
+</selector>
