--- a/smieci/app/src/main/res/drawable/vertical_line.xml
+++ b/smieci/app/src/main/res/drawable/vertical_line.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape  xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/black"></solid>
+<selector  xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/black"></solid>
 
-    <corners android:radius="100dp"></corners>
-</shape>
+            <corners android:radius="100dp"></corners>
+        </shape>
+    </item>
+</selector>
