--- a/smieci/app/src/main/res/layout/dodawanie_lokalizacji.xml
+++ b/smieci/app/src/main/res/layout/dodawanie_lokalizacji.xml
@@ -69,7 +69,7 @@
         android:id="@+id/textLub"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="615dp"
+        android:layout_marginTop="635dp"
         android:text="@string/lub"
         android:textColor="@color/gray_text"
         android:textFontWeight="500"
@@ -83,7 +83,7 @@
         android:id="@+id/buttonSubmit"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_marginTop="560dp"
+        android:layout_marginTop="580dp"
         android:background="@drawable/przycisk_zatwierdz"
         android:text="@string/zatwierdz"
         android:textColor="@color/white"
@@ -97,7 +97,7 @@
         android:id="@+id/buttonUzyjLokalizacji"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_marginTop="648dp"
+        android:layout_marginTop="660dp"
         android:background="@drawable/przycisk_zatwierdz"
         android:text="@string/uzyj_loka"
         android:textColor="@color/white"
@@ -106,5 +106,85 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textGminaWybierz"
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="350dp"
+        android:background="@drawable/pole_input"
+        android:gravity="center"
+        android:padding="12dp"
+        android:text="@string/gmina"
+        android:textSize="16sp"
+        android:textColor="@color/gray_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textMiejscowoscWybierz"
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="425dp"
+        android:background="@drawable/pole_input"
+        android:gravity="center"
+        android:padding="12dp"
+        android:text="@string/miejscowosc"
+        android:textColor="@color/gray_text"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="500dp"
+        android:background="@drawable/pole_input"
+        android:gravity="center"
+        android:padding="12dp"
+        android:text="@string/ulica"
+        android:textColor="@color/gray_text"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+     />
+
+    <ImageView
+        android:id="@+id/imageStrzalka1"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="365dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/down" />
+
+    <ImageView
+        android:id="@+id/imageStrzalka2"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="440dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/down" />
+
+    <ImageView
+        android:id="@+id/imageStrzalka"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="515dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/down" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
