--- a/smieci/app/src/main/res/layout/logowanie.xml
+++ b/smieci/app/src/main/res/layout/logowanie.xml
@@ -179,6 +179,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/textOdnosnikRejestracja"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
