--- a/smieci/app/src/main/res/layout/rejestracja.xml
+++ b/smieci/app/src/main/res/layout/rejestracja.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Rejestracja"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_green"
@@ -195,6 +196,7 @@
             >
         </TextView>
         <TextView
+            android:id="@+id/textOdnosnikLogowanie"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:text="@string/konto_zaloguj"
