--- a/smieci/app/src/main/res/layout/dodawanie_lokalizacji.xml
+++ b/smieci/app/src/main/res/layout/dodawanie_lokalizacji.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".DodawanieLokalizacji"
+    android:fillViewport="true"
+    >
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/light_green"
-    tools:context=".DodawanieLokalizacji">
+    android:id="@+id/EkranLokalizacji"
+    >
 
     <ImageView
         android:id="@+id/imageWave1"
@@ -188,3 +197,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
