--- a/smieci/app/src/main/res/layout/logowanie.xml
+++ b/smieci/app/src/main/res/layout/logowanie.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context=".Logowanie"
+    >
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/EkranLogowania"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark_green_bg"
@@ -192,3 +197,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
