zmiana useericon, layout edit inf

--- a/smieci/app/src/main/res/values/colors.xml
+++ b/smieci/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="light_green">#DEECB2</color>
-    <color name="dark_green_bg">#4D7B1F</color>
+    <color name="dark_green_bg">#567A1F</color>
 
     <color name="gray_text">#3D413A</color>
     <color name="light_gray_text">#DEF2CF</color>
