--- a/smieci/app/src/main/res/layout/dodawanie_informacji.xml
+++ b/smieci/app/src/main/res/layout/dodawanie_informacji.xml
@@ -15,6 +15,59 @@
         android:background="@color/light_green"
         >
 
+        <LinearLayout
+            android:layout_width="280dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="470dp"
+            android:background="@drawable/toggle_options_bg"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ToggleButton
+                android:id="@+id/toggleOp3_1"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:background="@drawable/toggle_button_background"
+                android:checked="false"
+                android:stateListAnimator="@null"
+                android:text="ToggleButton"
+                android:textColor="@drawable/toggle_button_text_color"
+                android:textOff="@string/Wysoka"
+                android:textOn="@string/Wysoka"
+                android:textSize="12sp" />
+
+            <View
+                android:id="@+id/line_3"
+                android:layout_width="2dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:background="@drawable/vertical_line" />
+
+            <ToggleButton
+                android:id="@+id/toggleOp3_2"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:background="@drawable/toggle_button_background"
+                android:checked="false"
+                android:stateListAnimator="@null"
+                android:text="ToggleButton"
+                android:textColor="@drawable/toggle_button_text_color"
+                android:textOff="@string/Pozostałe"
+                android:textOn="@string/Pozostałe"
+                android:textSize="12sp" />
+
+
+        </LinearLayout>
+
         <ImageView
             android:id="@+id/imageWave1"
             android:layout_width="wrap_content"
@@ -50,14 +103,14 @@
 
         <ImageView
             android:id="@+id/userIcon"
-            android:layout_width="130dp"
-            android:layout_height="265dp"
-            android:layout_marginTop="60dp"
-            android:src="@drawable/planet_earth"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="100dp"
+            android:src="@drawable/user_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/planet_earth" />
+            app:srcCompat="@drawable/user_icon" />
 
         <TextView
             android:id="@+id/textPodaj"
@@ -77,7 +130,7 @@
             android:id="@+id/buttonSubmit"
             android:layout_width="200dp"
             android:layout_height="50dp"
-            android:layout_marginTop="560dp"
+            android:layout_marginTop="610dp"
             android:background="@drawable/przycisk_zatwierdz"
             android:text="@string/zatwierdz"
             android:textColor="@color/white"
@@ -208,7 +261,7 @@
         <LinearLayout
             android:layout_width="280dp"
             android:layout_height="45dp"
-            android:layout_marginTop="470dp"
+            android:layout_marginTop="540dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -216,7 +269,7 @@
             android:background="@drawable/toggle_options_bg">
 
             <ToggleButton
-                android:id="@+id/toggleOp3_1"
+                android:id="@+id/toggleOp4_1"
                 android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -232,7 +285,7 @@
                 android:background="@drawable/toggle_button_background"/>
 
             <View
-                android:id="@+id/line_3"
+                android:id="@+id/line_4"
                 android:layout_width="2dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/vertical_line"
@@ -241,7 +294,7 @@
                 />
 
             <ToggleButton
-                android:id="@+id/toggleOp3_2"
+                android:id="@+id/toggleOp4_2"
                 android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
