--- a/smieci/app/src/main/res/layout/dodawanie_lokalizacji.xml
+++ b/smieci/app/src/main/res/layout/dodawanie_lokalizacji.xml
@@ -51,14 +51,14 @@
 
     <ImageView
         android:id="@+id/userIcon"
-        android:layout_width="130dp"
-        android:layout_height="265dp"
-        android:layout_marginTop="60dp"
-        android:src="@drawable/planet_earth"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/user_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/planet_earth" />
+        app:srcCompat="@drawable/user_icon" />
 
     <TextView
         android:id="@+id/textDodaj"
