--- a/smieci/app/src/main/res/layout/logowanie.xml
+++ b/smieci/app/src/main/res/layout/logowanie.xml
@@ -102,14 +102,14 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="130dp"
-        android:layout_height="265dp"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/planet_earth"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="140dp"
+        android:src="@drawable/user_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/planet_earth" />
+        app:srcCompat="@drawable/user_icon" />
 
     <EditText
         android:id="@+id/editTextEmail"
