--- a/smieci/app/src/main/res/layout/potwierdz_informacje.xml
+++ b/smieci/app/src/main/res/layout/potwierdz_informacje.xml
@@ -8,14 +8,14 @@
 
     <ImageView
         android:id="@+id/userIcon"
-        android:layout_width="130dp"
-        android:layout_height="265dp"
-        android:layout_marginTop="60dp"
-        android:src="@drawable/planet_earth"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/user_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/planet_earth" />
+        app:srcCompat="@drawable/user_icon" />
     <ImageView
         android:id="@+id/imageWave1"
         android:layout_width="wrap_content"
