--- a/smieci/app/src/main/res/layout/user_panel.xml
+++ b/smieci/app/src/main/res/layout/user_panel.xml
@@ -8,15 +8,14 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="130dp"
-        android:layout_height="265dp"
-        android:layout_marginTop="4dp"
-        android:src="@drawable/planet_earth"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="70dp"
+        android:src="@drawable/user_icon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.54"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/planet_earth" />
+        app:srcCompat="@drawable/user_icon" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -36,7 +35,7 @@
         android:layout_height="30dp"
         android:layout_marginTop="168dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.62"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/pencil_green_bg" />
