--- a/smieci/app/src/main/res/drawable/przycisk_zatwierdz.xml
+++ b/smieci/app/src/main/res/drawable/przycisk_zatwierdz.xml
@@ -2,7 +2,7 @@
 <selector  xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/green_dark_button" />
+            <solid android:color="@color/dark_gray" />
             <padding
                 android:left="1dp"
                 android:right="1dp"
