--- a/smieci/app/src/main/res/values/themes.xml
+++ b/smieci/app/src/main/res/values/themes.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.Smieci" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.Smieci" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="colorPrimary">@color/light_green</item>
+        <item name="colorPrimaryDark">@color/dark_green_bg</item>
+    </style>
+
+    <style name="NawigacjaAnimacja">
+        <item name="android:windowEnterAnimation">@anim/slide_in</item>
+        <item name="android:windowExitAnimation">@anim/slide_out</item>
+    </style>
 </resources>
