--- a/smieci/app/src/main/res/layout/zmien_haslo.xml
+++ b/smieci/app/src/main/res/layout/zmien_haslo.xml
@@ -6,13 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".Rejestracja">
+    tools:context=".ZmienHaslo">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/light_green"
-        android:id="@+id/EkranRejestracji"
+        android:id="@+id/EkranZmienHaslo"
         >
 
         <ImageView
@@ -48,44 +48,15 @@
             android:src="@drawable/shape3"
             app:srcCompat="@drawable/shape3" />
 
-        <LinearLayout
-            android:id="@+id/linearLayoutPomin"
-            android:layout_width="109dp"
-            android:layout_height="39dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/przycisk_pomin"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-
-            <TextView
-                android:id="@+id/button2"
-                android:layout_width="71dp"
-                android:layout_height="40dp"
-                android:gravity="center_vertical"
-                android:paddingStart="15dp"
-                android:text="@string/pomin"
-                android:textColor="@color/white"
-                android:textSize="14dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:layout_editor_absoluteX="285dp"
-                tools:layout_editor_absoluteY="16dp"
-
-                />
-
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="5dp"
-                android:src="@drawable/right_arrow_white"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </LinearLayout>
+        <ImageView
+            android:id="@+id/cofnij"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/left_arrow_black" />
 
         <ImageView
             android:id="@+id/userIcon"
@@ -99,12 +70,12 @@
             app:srcCompat="@drawable/user_icon" />
 
         <TextView
-            android:id="@+id/textZarejestruj"
+            android:id="@+id/textZmienHaslo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="140dp"
             android:layout_marginTop="285dp"
-            android:text="@string/zarejestruj"
+            android:text="@string/zmien_haslo"
             android:textColor="@color/gray_text"
             android:textFontWeight="500"
             android:textSize="20dp"
@@ -112,16 +83,16 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/editTextEmail"
+            android:id="@+id/editTextAktualneHaslo"
             android:layout_width="280dp"
             android:layout_height="40dp"
             android:layout_marginTop="340dp"
             android:background="@drawable/pole_input"
             android:elevation="2dp"
             android:ems="10"
-            android:inputType="textEmailAddress"
+            android:inputType="textPassword"
             android:paddingStart="15dp"
-            android:hint="@string/email"
+            android:hint="@string/aktualne_haslo"
             android:textColorHint="@color/light_gray_hint"
             android:textColor="@color/gray_text"
             android:textSize="15sp"
@@ -130,7 +101,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/editTextHaslo"
+            android:id="@+id/editTextNoweHaslo"
             android:layout_width="280dp"
             android:layout_height="40dp"
             android:layout_marginTop="410dp"
@@ -139,7 +110,7 @@
             android:ems="10"
             android:inputType="textPassword"
             android:paddingStart="15dp"
-            android:hint="@string/haslo"
+            android:hint="@string/nowe_haslo"
             android:textColorHint="@color/light_gray_hint"
             android:textColor="@color/gray_text"
             android:textSize="15sp"
@@ -148,7 +119,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/editTextHasloPow"
+            android:id="@+id/editTextNoweHasloPow"
             android:layout_width="280dp"
             android:layout_height="40dp"
             android:layout_marginTop="480dp"
@@ -157,7 +128,7 @@
             android:ems="10"
             android:inputType="textPassword"
             android:paddingStart="15dp"
-            android:hint="@string/pow_haslo"
+            android:hint="@string/powtorz_nowe_haslo"
             android:textColorHint="@color/light_gray_hint"
             android:textColor="@color/gray_text"
             android:textSize="15sp"
@@ -166,7 +137,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/zatwierdz"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_marginTop="560dp"
@@ -178,41 +149,6 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <LinearLayout
-            android:layout_width="300dp"
-            android:layout_height="30dp"
-            android:layout_marginBottom="10dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:gravity="center_horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:text="@string/konto"
-                android:layout_gravity="center_vertical"
-                android:paddingEnd="5dp"
-                android:textFontWeight="500"
-                android:textSize="16sp"
-                >
-            </TextView>
-            <TextView
-                android:id="@+id/textOdnosnikLogowanie"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:text="@string/konto_zaloguj"
-                android:layout_gravity="center_vertical"
-                android:textFontWeight="500"
-                android:textSize="16sp"
-                >
-
-            </TextView>
-        </LinearLayout>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
