--- a/smieci/app/src/main/res/layout/dodawanie_informacji.xml
+++ b/smieci/app/src/main/res/layout/dodawanie_informacji.xml
@@ -15,6 +15,15 @@
         android:background="@color/light_green"
         >
 
+        <ImageView
+            android:id="@+id/cofnij"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/left_arrow_black" />
 
         <!--
 
