--- a/smieci/app/src/main/res/values/colors.xml
+++ b/smieci/app/src/main/res/values/colors.xml
@@ -29,4 +29,6 @@
 
     <color name="dark_gray">#3D413A</color>
 
+    <!-- Kolory do bloczków -->
+    <color name="papier_border">#81C3FA</color>
 </resources>
