--- a/smieci/app/src/main/res/layout/main.xml
+++ b/smieci/app/src/main/res/layout/main.xml
@@ -45,6 +45,7 @@
         </androidx.appcompat.widget.ActionMenuView>
 
         <TextView
+            android:id="@+id/texcik"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/NajblizszyWywoz"
