--- a/smieci/app/src/main/res/layout/rejestracja.xml
+++ b/smieci/app/src/main/res/layout/rejestracja.xml
@@ -58,7 +58,9 @@
             android:gravity="center_vertical"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone">
+
 
 
             <TextView
@@ -91,7 +93,7 @@
             android:id="@+id/userIcon"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="80dp"
             android:src="@drawable/user_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -102,12 +104,30 @@
             android:id="@+id/textZarejestruj"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="140dp"
-            android:layout_marginTop="285dp"
+            android:layout_marginTop="220dp"
             android:text="@string/zarejestruj"
             android:textColor="@color/gray_text"
             android:textFontWeight="500"
             android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/editNazwaUzytkownika"
+            android:layout_width="280dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="270dp"
+            android:background="@drawable/pole_input"
+            android:elevation="2dp"
+            android:ems="10"
+            android:inputType="textEmailAddress"
+            android:paddingStart="15dp"
+            android:hint="@string/nazwa_uzytkownika"
+            android:textColorHint="@color/light_gray_hint"
+            android:textColor="@color/gray_text"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -166,7 +186,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/zatwierdz"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_marginTop="560dp"
