--- a/smieci/app/src/main/res/layout/dodawanie_informacji.xml
+++ b/smieci/app/src/main/res/layout/dodawanie_informacji.xml
@@ -147,15 +147,15 @@
             android:id="@+id/buttonSubmit"
             android:layout_width="200dp"
             android:layout_height="50dp"
-            android:layout_marginTop="610dp"
             android:background="@drawable/przycisk_zatwierdz"
             android:text="@string/zatwierdz"
             android:textColor="@color/white"
+            android:layout_marginTop="25dp"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/Segregacja" />
 
 
         <LinearLayout
