--- a/smieci/app/src/main/res/layout/dodawanie_lokalizacji.xml
+++ b/smieci/app/src/main/res/layout/dodawanie_lokalizacji.xml
@@ -6,15 +6,94 @@
     android:layout_height="match_parent"
     tools:context=".DodawanieLokalizacji"
     android:fillViewport="true"
+    android:id="@+id/scrollViewD"
+
     >
-
-
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_green"
     android:id="@+id/EkranLokalizacji"
+    android:clickable="true"
+    android:focusable="true"
     >
+
+    <LinearLayout
+        android:id="@+id/listViewParentG"
+        android:layout_width="240dp"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toBottomOf="@id/layoutGminaWybierz"
+        android:orientation="vertical"
+        android:background="@drawable/wyszukiwanie_bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        android:elevation="5dp"
+        >
+        <ListView
+            android:id="@+id/list_View_Gminy"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:visibility="visible"
+            android:layout_gravity="top"
+            >
+
+        </ListView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/listViewParentM"
+        android:layout_width="240dp"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toBottomOf="@id/layoutMiejscWybierz"
+        android:orientation="vertical"
+        android:background="@drawable/wyszukiwanie_bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        android:elevation="5dp"
+        >
+        <ListView
+            android:id="@+id/list_View_Miejsc"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:visibility="visible"
+            android:layout_gravity="top"
+            >
+
+        </ListView>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/listViewParentU"
+        android:layout_width="240dp"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toBottomOf="@id/layoutUlicaWybierz"
+        android:orientation="vertical"
+        android:background="@drawable/wyszukiwanie_bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        android:elevation="5dp"
+        >
+        <ListView
+            android:id="@+id/list_View_Ulica"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:visibility="visible"
+            android:layout_gravity="top"
+            >
+
+        </ListView>
+    </LinearLayout>
+
 
     <ImageView
         android:id="@+id/cofnij"
@@ -140,7 +219,7 @@
         android:orientation="horizontal"
         >
 
-        <TextView
+        <EditText
             android:id="@+id/textGminaWybierz"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -151,7 +230,7 @@
             android:textColor="@color/gray_text"
             android:textSize="16sp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="40dp"/>
+            android:layout_marginStart="20dp"/>
 
         <ImageView
             android:id="@+id/imageStrzalka1"
@@ -162,6 +241,9 @@
             app:srcCompat="@drawable/down" />
 
     </LinearLayout>
+
+
+
 
     <LinearLayout
         android:id="@+id/layoutMiejscWybierz"
@@ -175,7 +257,7 @@
         android:orientation="horizontal"
         >
 
-        <TextView
+        <EditText
             android:id="@+id/textMiejscowoscWybierz"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -185,7 +267,7 @@
             android:textColor="@color/gray_text"
             android:textSize="16sp"
             android:layout_weight="1"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="20dp"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
@@ -211,8 +293,8 @@
         android:orientation="horizontal"
         >
 
-    <TextView
-        android:id="@+id/textView5"
+    <EditText
+        android:id="@+id/textUlicaWybierz"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -221,7 +303,7 @@
         android:textColor="@color/gray_text"
         android:textSize="16sp"
         android:layout_weight="1"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="parent"
      />
 
@@ -238,3 +320,4 @@
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
+
