--- a/smieci/app/src/main/res/layout/main.xml
+++ b/smieci/app/src/main/res/layout/main.xml
@@ -124,7 +124,7 @@
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/papier_block_bg"
+                android:background="@drawable/metal_block_bg"
                 android:layout_row="0"
                 android:layout_column="1"
                 android:gravity="center"
@@ -166,7 +166,7 @@
                     android:id="@+id/metalBlokImg"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/kosz_papier"
+                    android:src="@drawable/kosz_metal"
                     android:layout_gravity="bottom"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="5dp"
@@ -182,7 +182,7 @@
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/papier_block_bg"
+                android:background="@drawable/szklo_block_bg"
                 android:layout_row="1"
                 android:layout_column="0"
                 android:gravity="center"
@@ -224,7 +224,7 @@
                     android:id="@+id/szkloBlokImg"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/kosz_papier"
+                    android:src="@drawable/kosz_szklo"
                     android:layout_gravity="bottom"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="5dp"
@@ -240,7 +240,7 @@
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/papier_block_bg"
+                android:background="@drawable/bio_block_bg"
                 android:layout_row="1"
                 android:layout_column="1"
                 android:gravity="center"
@@ -282,7 +282,7 @@
                     android:id="@+id/bioBlokImg"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/kosz_papier"
+                    android:src="@drawable/kosz_bio"
                     android:layout_gravity="bottom"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="5dp"
