--- a/smieci/app/src/main/res/values/themes.xml
+++ b/smieci/app/src/main/res/values/themes.xml
@@ -3,10 +3,14 @@
     <style name="Theme.Smieci" parent="android:Theme.Material.Light.NoActionBar">
         <item name="colorPrimary">@color/light_green</item>
         <item name="colorPrimaryDark">@color/dark_green_bg</item>
+        <item name="android:textColorPrimary">@color/gray_text</item>
+        <item name="android:textColorHint">@color/gray_text</item>
     </style>
 
     <style name="NawigacjaAnimacja">
         <item name="android:windowEnterAnimation">@anim/slide_in</item>
         <item name="android:windowExitAnimation">@anim/slide_out</item>
     </style>
+
+
 </resources>
